<resources>
    <string name="app_name">RickAndMortyApp</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="character_image">Character Image</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="characters">Characters</string>
    <string name="back">Back</string>
    <string name="location">Location</string>
    <string name="origin">Origin</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="visit">Visit</string>
    <string name="type">Type</string>
    <string name="favorites">Favorites</string>
    <string name="rick_and_morty" translatable="false">Rick and Morty</string>
    <string name="filter_button">Filter selection</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="species">Species</string>
    <string name="name">Name</string>
    <string name="search_by_name">search by name</string>
    <string name="home_button">Home button</string>
    <string name="dark_theme">Dark theme</string>
    <string name="current_language">Current language</string>
    <string name="v1_0" translatable="false">v1.0</string>
    <string name="en">EN</string>
    <string name="settings">Settings</string>
    <string name="tr">TR</string>
    <string name="no_connection">NO CONNECTION</string>
    <string-array name="genders">
        <item>Genders</item>
        <item>Female</item>
        <item>Male</item>
        <item>Genderless</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="status">
        <item>Status</item>
        <item>Alive</item>
        <item>Dead</item>
        <item>Unknown</item>
    </string-array>
    <string name="light_theme">Light theme</string>
    <string name="select_a_language">Select a language</string>
    <string-array name="langs">
        <item>TR</item>
        <item>EN</item>
    </string-array>
</resources>