<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_DarkTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/dark_theme"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switch_DarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:paddingHorizontal="8dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/current_language"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_CurrentLanguage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:text="@string/en"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="#B1B1B1"
        android:layout_marginTop="8dp"
        android:text="@string/v1_0"
        android:textSize="15sp" />
</LinearLayout>