<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.FilterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_charactersFragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_backImg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/back"
                style="@style/Icons"
                android:gravity="center_vertical"
                android:paddingHorizontal="18dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_filterCharacterName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:autofillHints="true"
                android:gravity="center_vertical"
                android:hint="@string/search_by_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_filter"
                app:layout_constraintStart_toEndOf="@+id/iv_backImg"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_filter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/filter_button"
                android:paddingHorizontal="18dp"
                style="@style/Icons"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_charactersFragment">

        <Spinner
            android:id="@+id/spinner_characterGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            style="@style/SpinnerButton"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinner_characterStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        <Spinner
            android:id="@+id/spinner_characterStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/SpinnerButton"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinner_characterGender"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcFilteredCharacters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/filterCharactersPaginationProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterPanel"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/iv_NoConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_no_connection"
        android:visibility="gone"
        android:contentDescription="@string/no_connection" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbToHomeFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:layout_margin="30dp"
        android:src="@drawable/ic_arrow_up"
        android:contentDescription="@string/home_button" />

    <ProgressBar
        android:id="@+id/filterCharactersPaginationProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>